created basic arena, tiling, and movement system for battler

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <script src='lib/phaser/build/phaser.min.js'></script>
 <script src='main.js'></script>
 
+<script src='src/base/Sprite.js'></script>
+
 <script src='src/entities/Battler.js'></script>
+<script src='src/entities/Tile.js'></script>
+<script src='src/entities/Arena.js'></script>
 
 <script src='src/states/BattleState.js'></script>
 
