added hero abstraction from battler

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script src='src/base/Sprite.js'></script>
 
 <script src='src/entities/Battler.js'></script>
+<script src='src/entities/Hero.js'></script>
 <script src='src/entities/Tile.js'></script>
 <script src='src/entities/Arena.js'></script>
 
